fixed footer alignment issue

--- a/zorronew/css/common-style.css
+++ b/zorronew/css/common-style.css
@@ -153,7 +153,7 @@ https://www.multidymenson.com/
   }
 .footer-container.home-footer .nav-item .nav-link{
   color: #fff;
-  padding: 5px 50px 55px 0px;
+  padding: 5px 50px 30px 0px;
 }
 .footer-container.home-footer .nav-item .nav-link:hover{
   color: #ff0000;
@@ -1161,7 +1161,9 @@ nav.card-big-logo{
 }
 
 
-
+.fs-1 li {
+  padding-bottom: 20px;
+}
 
 
 
